--- a/src/templates/orca/_contact.pug
+++ b/src/templates/orca/_contact.pug
@@ -1,6 +1,6 @@
 section(id="contact" class="o-section js-scrollUp" data-theme='light')
     div(class="o-wrapper")
-        h2(class="u-head_section" data-name='Contacto') Contacto
+        h2(class="u-head_section" data-name='Contacto' draggable="false" class="js-intersector") Contacto
     .o-wrapper(style="margin-top: 200px")
         .c-contact(data-square='multimedia')
             .c-contact_map: .c-contact_map-pin.js-link
