--- a/src/templates/orca/_proposal.pug
+++ b/src/templates/orca/_proposal.pug
@@ -1,5 +1,5 @@
 section.o-section(data-theme='gold' id="proposal")
     .o-wrapper
-        +headding('h1', 'Horizonte, lo que quisimos lograr.', 'Propuesta', 'de marca.')(class="js-scrollUp")
+        +headding('h1', 'Horizonte, lo que quisimos lograr.', 'Propuesta', 'de marca.')(class="js-intersector in-out")
     .o-wrapper
-        img(src="images/projects/orca/orca_proposal.png", alt="")
+        img(src="images/projects/orca/orca_proposal.png" alt="" draggable="false" class="js-intersector hk-image-layout")
