--- a/src/templates/orca/_tipografia.pug
+++ b/src/templates/orca/_tipografia.pug
@@ -1,5 +1,5 @@
 section.o-section(data-theme='dark' id="tipografia")
     .o-wrapper
-        +headding('h1', 'Aspectos visuales.', 'Tipografía', null)(class="js-scrollUp")
+        +headding('h1', 'Aspectos visuales.', 'Tipografía', null)(class="js-intersector")
     .o-wrapper
-        img(src="images/projects/orca/orca_tipografia.png", alt="" draggable="false")
+        img(src="images/projects/orca/orca_tipografia.png" alt="" draggable="false" class="js-intersector hk-image-layout")
