--- a/src/templates/orca/_welcome.pug
+++ b/src/templates/orca/_welcome.pug
@@ -1,6 +1,6 @@
 section.o-section(data-theme='gray' id="welcome")
     .o-wrapper
-        +headding('h1', null, 'Proyecto', 'orca')(class="js-scrollUp")
+        +headding('h1', null, 'Proyecto', 'orca')(class="js-intersector in-up")
         blockquote(class="c-welcome_message")
             p.
                 Rediseño de marca, estrategía comunicación,
