--- a/src/templates/orca/_isotipo.pug
+++ b/src/templates/orca/_isotipo.pug
@@ -1,5 +1,5 @@
 section.o-section(data-theme='light' id="isotipo")
     .o-wrapper
-        +headding('h1', 'Aspectos visuales.', 'Abstracción', null)(class="js-scrollUp")
+        +headding('h1', 'Aspectos visuales.', 'Abstracción', null)(class="js-intersector")
     .o-wrapper
-        img(src="images/projects/orca/orca_isotipo.png", alt="" draggable="false")
+        img(src="images/projects/orca/orca_isotipo.png" alt="" draggable="false" class="js-intersector hk-image-layout")
