--- a/src/templates/orca/_objectives.pug
+++ b/src/templates/orca/_objectives.pug
@@ -1,5 +1,5 @@
 section.o-section(data-theme='gray' id="objectives")
     .o-wrapper
-        +headding('h1', 'Norte, objetivos a cumplir.', 'Proposito', 'rebranding.')(class="js-scrollUp")
+        +headding('h1', 'Norte, objetivos a cumplir.', 'Proposito', 'rebranding.')(class="js-intersector in-out")
     .o-wrapper
-        img(src="images/projects/orca/orca_proposito_rebranding.png", alt="" draggable="false")
+        img(src="images/projects/orca/orca_proposito_rebranding.png" alt="" draggable="false" class="js-intersector hk-image-layout")
