--- a/src/templates/orca/_preview.pug
+++ b/src/templates/orca/_preview.pug
@@ -1,5 +1,5 @@
 section.o-section(data-theme='light' id="preview")
     .o-wrapper
-        +headding('h1', 'Inicio,  lo que nos trajo aquí.', 'Sobre', 'proyecto orca.')(class="js-scrollUp")
+        +headding('h1', 'Inicio,  lo que nos trajo aquí.', 'Sobre', 'proyecto orca.')(class="js-intersector in-out")
     .o-wrapper
-        img(src="images/projects/orca/orca_preview.png", alt="")
+        img(src="images/projects/orca/orca_preview.png" alt="" draggable="false" class="js-intersector hk-image-layout")
