--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -20,6 +20,7 @@ html {
         --theme-mega-headding-shadow: 0, 0, 0;
         --theme-card-content-bg: var(--color-w);
         --theme-card-before-border-bg: var(--color-a);
+        --theme-headding-indicator: var(--color-1);
     }
     &[data-theme='gray'] {
         --theme-section-bg: var(--color-0);
@@ -397,6 +398,115 @@ html {
             background-image: url(images/projects/valientes/valientes_aplicaciones_bg.png);
             background-size: auto 60%;
             background-position: center;
+        }
+    }
+    .o-section {
+        img {
+            user-select: none;
+            pointer-events: none;
+        }
+        &:first-of-type {
+            .o-wrapper {
+                margin-top: 18vh;
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
+}
+
+.on-origen {
+    .o-menu {
+        max-width: 600px;
+    }
+    #welcome {
+        .cont-multimedia {
+            margin-top: 100px;
+        }
+    }
+    #record {
+        min-height: 75vh;
+    }
+    #proposal {
+        position: relative;
+        img {
+            display: flex;
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            top: 0;
+        }
+        &:before {
+            background-image: url(images/projects/origen/origen_propuesta_bg.png);
+            background-size: auto 66%;
+            background-position: 110% 10%;
+        }
+    }
+    #colors {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/origen/origen_colores_bg.png);
+            background-size: auto;
+            background-position: center;
+        }
+    }
+    #referentes {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/origen/origen_referentes_bg.png);
+            background-size: auto;
+            background-position: center 80%;
+        }
+    }
+    #elements {
+        position: relative;
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+        }
+
+        &:before {
+            background-image: url(images/projects/origen/origen_elementos_bg.png);
+            background-size: auto;
+            background-position: center 120%;
+        }
+
+        &:after {
+            background-image: url(images/projects/origen/origen_elementos_bg_2.png);
+            background-size: auto;
+            background-position: center 30%;
+        }
+    }
+    #aplicaciones {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/origen/origen_aplicaciones_bg.png);
+            background-size: auto;
+            background-position: center 80%;
         }
     }
     .o-section {
