--- a/src/styles/layout/header/_index.scss
+++ b/src/styles/layout/header/_index.scss
@@ -26,7 +26,7 @@
         }
         &[data-over='on-gold'] {
             .o-menu_options-link {
-                color: var(--color-1);
+                // color: var(--color-1);
             }
         }
         &[data-over='on-dark'] {
