--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -10,7 +10,7 @@ html {
         --theme-mega-headding-color: #f4c82a;
         --theme-mega-headding-shadow: 30, 30, 30;
         --theme-header-bg: rgba(244, 200, 42, 0.5);
-        --theme-menu-link-color: var(--color-1);
+        --theme-menu-link-color: var(--color-w);
     }
     &[data-theme='light'] {
         --theme-section-bg: var(--color-w);
@@ -21,12 +21,14 @@ html {
         --theme-card-content-bg: var(--color-w);
         --theme-card-before-border-bg: var(--color-a);
         --theme-headding-indicator: var(--color-1);
+        --theme-menu-link-color: var(--color-1);
     }
     &[data-theme='gray'] {
         --theme-section-bg: var(--color-0);
         --theme-headding-enfasis: var(--color-a);
         --theme-headding-separador: var(--color-a);
         --theme-card-content-bg: var(--color-a);
+        --theme-menu-link-color: var(--color-1);
     }
     &[data-theme='dark'] {
         --theme-section-bg: var(--color-1);
@@ -35,6 +37,7 @@ html {
         --theme-headding-indicator: var(--color-w);
         --theme-header-bg: rgba(0, 0, 0, 0.2);
         --theme-svg-logo-fill: var(--color-w);
+        --theme-menu-link-color: var(--color-w);
     }
 }
 .o-section {
@@ -54,11 +57,15 @@ html {
                 display: inline-flex;
                 &:nth-child(1) {
                     grid-column: 3 / 10;
-                    grid-row: 3 / 10;
+                    grid-row: 3 / 11;
                 }
                 &:nth-child(2) {
                     grid-column: 13 / 20;
                     grid-row: 6 / 13;
+                }
+                &:nth-child(3) {
+                    grid-column: 5 / 12;
+                    grid-row: 13 / 22;
                 }
             }
         }
@@ -93,7 +100,7 @@ html {
     will-change: opacity, transform;
 }
 [data-view='fade-inDown'] {
-    transition: opacity 0.5s cubic-bezier(0.37, 0.01, 0, 0.98) 0.3s, transform 0.6s cubic-bezier(0.37, 0.01, 0, 0.98) 0.4s;
+    transition: opacity 0.5s cubic-bezier(0.37, 0.01, 0, 0.98) 70ms, transform 0.6s cubic-bezier(0.37, 0.01, 0, 0.98) 100ms;
     opacity: 1;
     transform: translateY(0);
     &.c-section_headding {
