update: #v6.7 - tag a en slider

--- a/src/templates/index/_works.pug
+++ b/src/templates/index/_works.pug
@@ -5,16 +5,16 @@ section(id="works" class="o-section" data-theme="light")
         div(class="blog-slider js-intersector")
             .blog-slider__wrp.swiper-wrapper
                 .blog-slider__item.swiper-slide
-                    .blog-slider__img: img(src='./images/projects/slider/1.jpg' alt='')
+                    a(class="blog-slider__img" href='orca.html'): img(src='./images/projects/slider/1.jpg' alt='')
                     .blog-slider__content: a(class="blog-slider__button js-link js-mouseStatus" href='orca.html') Conoce Orca
                 .blog-slider__item.swiper-slide
-                    .blog-slider__img: img(src='./images/projects/slider/2.jpg' alt='')
+                    a(class="blog-slider__img" href='origen.html'): img(src='./images/projects/slider/2.jpg' alt='')
                     .blog-slider__content: a(class="blog-slider__button js-link js-mouseStatus" href='origen.html') Conoce Origen
                 .blog-slider__item.swiper-slide
-                    .blog-slider__img: img(src='./images/projects/slider/4.jpg' alt='')
+                    a(class="blog-slider__img" href='betsknate.html'): img(src='./images/projects/slider/4.jpg' alt='')
                     .blog-slider__content: a(class="blog-slider__button js-link js-mouseStatus" href='betsknate.html') Conoce Betsknate
                 .blog-slider__item.swiper-slide
-                    .blog-slider__img: img(src='./images/projects/slider/3.jpg' alt='')
+                    a(class="blog-slider__img" href='valientes.html'): img(src='./images/projects/slider/3.jpg' alt='')
                     .blog-slider__content: a(class="blog-slider__button js-link js-mouseStatus" href='valientes.html') Conoce Valientes
             .blog-slider__pagination
             // Add Arrows
