update: #v8 - #refactor archivos .pug para compilación con #gulp

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,31 +1,31 @@
-include ./templates/_mixin
+include ./views/shared/_mixin
 <!DOCTYPE html>
 html(lang="en")
     block config
         -var mainClass = 'on-index'
         -var data = 'index'
         -var menu = [ {"link": '#about', "text": 'nosotros'}, {"link": '#works', "text": 'trabajos'}, {"link": '#enfoque', "text": 'enfoque'}, {"link": '#contact', "text": 'contacto'}]
-        include ./templates/_head
+        include ./views/shared/_head
     body
         main(id="app" class="o-main"+' '+mainClass)
-            include ./templates/_header
+            include ./views/shared/_header
             |
-            include ./templates/index/_welcome
+            include ./views/templates/index/_welcome
             |
-            include ./templates/index/_works
+            include ./views/templates/index/_works
             |
-            include ./templates/index/_enfoque
+            include ./views/templates/index/_enfoque
             |
-            include ./templates/index/_founders
+            include ./views/templates/index/_founders
             |
-            include ./templates/index/_contact
+            include ./views/templates/index/_contact
             |
             |
-            include ./templates/_footer
+            include ./views/shared/_footer
             |
         div(class="mouse-tracker")
         |
-        include ./templates/_append
+        include ./views/shared/_append
         |
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js")
