--- a/src/betsknate.pug
+++ b/src/betsknate.pug
@@ -1,34 +1,34 @@
-include ./templates/_mixin
+include ./views/shared/_mixin
 <!DOCTYPE html>
 html(lang="en")
     block config
         -var mainClass = 'on-betsknate'
         -var data = 'Betsknate'
         -var menu = [ {"link": './', "text": 'inicio'},  {"link": '#proposal', "text": 'marca'}, {"link": '#colors', "text": 'colores'}, {"link": '#elements', "text": 'elementos'}, {"link": '#aplicaciones', "text": 'aplicaciones'}, {"link": '#contact', "text": 'contacto'}]
-        include ./templates/_head
+        include ./views/shared/_head
     body
         main(id="app" class="o-main"+' '+mainClass)
-            include ./templates/_header
+            include ./views/shared/_header
             |
-            include ./templates/betsknate/_welcome
+            include ./views/templates/betsknate/_welcome
             |
-            include ./templates/betsknate/_record
+            include ./views/templates/betsknate/_record
             |
-            include ./templates/betsknate/_preview
+            include ./views/templates/betsknate/_preview
             |
-            include ./templates/betsknate/_proposal
+            include ./views/templates/betsknate/_proposal
             |
-            include ./templates/betsknate/_colors
+            include ./views/templates/betsknate/_colors
             |
-            include ./templates/betsknate/_elementos
+            include ./views/templates/betsknate/_elementos
             |
-            include ./templates/betsknate/_aplicaciones
+            include ./views/templates/betsknate/_aplicaciones
             |
-            include ./templates/betsknate/_contact
+            include ./views/templates/betsknate/_contact
             |
-            include ./templates/_footer
+            include ./views/shared/_footer
             |
         div(class="mouse-tracker")
         |
         |
-        include ./templates/_append
+        include ./views/shared/_append
