--- a/src/valientes.pug
+++ b/src/valientes.pug
@@ -1,34 +1,34 @@
-include ./templates/_mixin
+include ./views/shared/_mixin
 <!DOCTYPE html>
 html(lang="en")
     block config
         -var mainClass = 'on-valientes'
         -var data = 'CS - Valientes'
         -var menu = [ {"link": './', "text": 'inicio'}, {"link": '#proposal', "text": 'propuesta'}, {"link": '#colores', "text": 'colores'}, {"link": '#referentes', "text": 'referentes'}, {"link": '#elements', "text": 'elementos'}, {"link": '#contact', "text": 'contacto'}]
-        include ./templates/_head
+        include ./views/shared/_head
     body
         main(id="app" class="o-main"+' '+mainClass)
-            include ./templates/_header
+            include ./views/shared/_header
             |
-            include ./templates/valientes/_welcome
+            include ./views/templates/valientes/_welcome
             |
-            include ./templates/valientes/_record
+            include ./views/templates/valientes/_record
             |
-            include ./templates/valientes/_proposal
+            include ./views/templates/valientes/_proposal
             |
-            include ./templates/valientes/_colores
+            include ./views/templates/valientes/_colores
             |
-            include ./templates/valientes/_referentes
+            include ./views/templates/valientes/_referentes
             |
-            include ./templates/valientes/_elementos
+            include ./views/templates/valientes/_elementos
             |
-            include ./templates/valientes/_aplicaciones
+            include ./views/templates/valientes/_aplicaciones
             |
-            include ./templates/valientes/_contact
+            include ./views/templates/valientes/_contact
             |
-            include ./templates/_footer
+            include ./views/shared/_footer
             |
         div(class="mouse-tracker")
         |
         |
-        include ./templates/_append
+        include ./views/shared/_append
